# MFiX-21.3.2

./: CMakeLists.txt  PKG-INFO  pyproject.toml  setup.py
legacy_tests/: CMakeLists.txt
legacy_tests/Added_Mass_LiftForce/: source_u_g.f  source_u_s.f
legacy_tests/adiabaticFlame/: usr3.f  usr_rates.f
legacy_tests/chi-scheme/: usr_rates.f
legacy_tests/conduction2/: solve_energy_eq.f
legacy_tests/dem-tests/: CMakeLists.txt
legacy_tests/drying/: usr3.f  usr_rates.f
legacy_tests/hopper/: readme.txt
legacy_tests/ozone/: usr_rates.f
legacy_tests/phase_change/: usr_rates.f
legacy_tutorials/: CMakeLists.txt
mfixgui/: Makefile  __main__.py  advanced.py  advanced_keys.py  animations.py  arrows.py  bcs.py  bug_report.py  build.bat  build.sh  build_mfixsolver.py  chemistry.py  constants.py  create_geometry.sh  dashboard.py  default_values.py  expand_template.py  fluid_handler.py  geometry_handler.py  graphic_tabs.py  gui.py  ics.py  interpreter.py  iss.py  job.py  locate_keyword.py  logger.py  menu-windows.json  mesh.py  mesh_stats_viewer.py  model_setup.py  monitors.py  namelistparser.py  numerics.py  output.py  project.py  project_manager.py  pss.py  pymfix.py  pymfix_webserver.py  (+19 more)
model/: CMakeLists.txt  DGTSV.f  ODEPACK.F  accum_resid.f  adjust_a_g.f  adjust_a_s.f  adjust_eps.f  adjust_leq.f  adjust_theta.f  allocate_arrays.f  ambm_mod.f  b_m_p_star.f  bc_mod.f  bc_phi.f  bc_theta.f  cal_d.f  calc_cell.f  calc_coeff.f  calc_d_e.f  calc_d_n.f  calc_d_t.f  calc_dif_g.f  calc_dif_s.f  calc_e.f  calc_gama.f  calc_grbdry.f  calc_h.f  calc_k_cp.f  calc_k_g.f  calc_k_s.f  calc_mflux.f  calc_mu_g.f  calc_mu_s.f  calc_outflow.f  calc_p_star.f  calc_resid.f  calc_s_ddot_s.f  calc_trd_g.f  calc_trd_s.f  calc_vol_fr.f  (+224 more)
model/GhdTheory/: adjust_eps_ghd.f  bulk_viscosity.f  calc_d_ghd.f  calc_external_forces.f  calc_nflux.f  chi_ij_GHD.f  cooling_rate.f  cooling_rate_tc.f  dufour_coeff.f  ghd.f  ghdmassflux.f  mass_mobility.f  ordinary_diff.f  partial_elim_ghd.f  pressure.f  shear_viscosity.f  source_ghd_granular_energy.f  thermal_conductivity.f  thermal_diffusivity.f  thermal_mobility.f  transport_coeff_ghd.f
model/cartesian_grid/: CG_set_bc0.f  CG_set_outflow.f  CG_source_u_g.f  CG_source_u_s.f  CG_source_v_g.f  CG_source_v_s.f  CG_source_w_g.f  CG_source_w_s.f  allocate_dummy_cut_cell_arrays.f  calc_vort_out.f  cartesian_grid_init_namelist.f  check_data_cartesian.f  cut_cell_preprocessing.f  cutcell_mod.f  define_quadrics.f  dmp_cartesian.f  eval_f.f  get_alpha.f  get_connectivity.f  get_cut_cell_flags.f  get_cut_cell_volume_area.f  get_delh.f  get_master.f  get_poly_data.f  get_stl_data.f  intersect.f  polygon_mod.f  pvd_mod.f  quadric_mod.f  set_Odxyz.f  stl_mod.f  update_dashboard.f  vtk_mod.f  vtk_out.f  write_progress_bar.f
model/check_data/: check_axis.f  check_bc_dem.f  check_bc_geometry.f  check_bc_inflow.f  check_bc_outflow.f  check_bc_pic.f  check_bc_walls.f  check_boundary_conditions.f  check_chemical_rxns.f  check_dmp_prereqs.f  check_gas_phase.f  check_geometry.f  check_geometry_prereqs.f  check_ic_common_discrete.f  check_ic_dem.f  check_ic_mppic.f  check_initial_conditions.f  check_internal_surfaces.f  check_numerics.f  check_odepack_stiff_chem.f  check_output_control.f  check_point_sources.f  check_run_control.f  check_solids_common_all.f  check_solids_common_discrete.f  check_solids_continuum.f  check_solids_dem.f  check_solids_model_prereqs.f  check_solids_mppic.f  check_solids_phases.f
model/chem/: stiff_chem_dbg_mod.f  stiff_chem_maps_mod.f  stiff_chem_mod.f  stiff_chem_rrates.f  stiff_chem_stats_mod.f
model/cmake/: CodeCoverage.cmake  MfixOptions.cmake  MfixSolver.cmake  MfixTests.cmake  MfixUdf.cmake  PyMFIX.cmake  runtests.sh  rxn_preproc.py
model/des/: calc_collision_wall_mod.f  calc_des_2fluid.f  calc_drag_des.f  calc_epg_des.f  calc_force_dem.f  calc_gamma_des.f  calc_grad_des.f  calc_interp_weights.f  calc_pg_grad.f  calc_rrates_des.f  calc_thermo_des.f  cfassign.f  cffctowall.f  cfnewvalues.f  cfrelvel.f  cfslide.f  cfupdateold.f  cfwallcontact.f  cfwallposvel.f  check_cell_movement.f  comp_mean_fields.f  comp_mean_fields0.f  comp_mean_fields1.f  derived_types_mod.f  des_allocate_mod.f  des_bc_mod.f  des_cluster_mod.f  des_functions.f  des_granular_temperature.f  des_init_arrays.f  des_init_namelist.f  des_physical_prop.f  des_psd_mod.f  des_reaction_model.f  des_rxns_mod.f  des_thermo_cond_mod.f  des_thermo_conv.f  des_thermo_mod.f  des_thermo_newvalues.f  des_thermo_rad.f  (+57 more)
model/des/pic/: apply_wall_bc_pic.f90  bilinear_mod.f90  calc_avg_sol_vel.f90  calc_ps_pic.f90  integrate_time_pic.f90  interpolate_pic.f90  mfix_pic_mod.f90  mpi_funs_pic.f90  mpi_pack_pic.f90  pic_flow_bcs.f90  set_bc_pic_mi.f90  time_march_pic.f90
model/dmp_modules/: compar_mod.f  debug_mod.f  gridmap_mod.f  mpi_utility_mod.f  parallel_mpi_mod.f  sendrecv_mod.f
model/dqmom/: gaussj.f  odeint.f  rkck.f  rkqs.f  source_population_eq.f  usr_dqmom.f
model/include/: boundary_conditions.inc  cartesian_grid_namelist.inc  desnamelist.inc  error.inc  functions.inc  initial_conditions.inc  monitors.inc  numerical_params.inc  output_control.inc  run_control.inc  solids_phase.inc  usrnlst.inc.example
model/monitors/: area_average.f90  average.f90  average_des.f90  flowrate_des.f90  functions.f90  functions_des.f90  minmax.f90  minmax_des.f90  monitor_mod.f90  volume_average.f90  write_monitor.f90
model/qmomk/: qmomk_allocate_arrays.f  qmomk_bc_mod.f  qmomk_collision_mod.f  qmomk_gas_drag.f  qmomk_init_bc.f  qmomk_init_namelist.f  qmomk_initial_conditions.f  qmomk_make_arrays.f  qmomk_read_restart.f  qmomk_set_bc.f  qmomk_time_march.f  qmomk_write_restart.f
model/thermochemical/: BURCAT.THR  read_thermochemical_mod.f  readme
post_mfix/: CMakeLists.txt  deallocate_arrays.f  examine_data.f  finit.f  get_mu_s.f  granular_qty.f  interp_res.f  ornl_header.f  out_from_res.f  out_from_spx.f  print_out.f  read_res0.f  res_from_spx.f  select_spx_rec.f  time_avg.f  usr_input.f  usr_write_out1.f
queue_templates/: gridengine  slurm
tutorials/: CMakeLists.txt
(+396 files in other folders)
